--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -203,6 +203,16 @@ effects:
       value: 1
       radius: 7
 
+  skeleton:
+    enabled: true
+    name: "&fCloud"
+    description: "&fThe victim into a skeleton."
+    price: 1000
+    damage:
+      enabled: false
+      value: 0
+      radius: 0
+
   cloud:
     enabled: true
     name: "&fCloud"
